@@ -66,7 +66,11 @@ class HttpCommTask final : public GeneralCommTask<T> {
   static int on_body(llhttp_t* p, const char* at, size_t len);
   static int on_message_complete(llhttp_t* p);
 
- private:
+  /// verify if the transfer-encoding in the header is chunked, which is not
+  /// implemented
+  static bool transferEncodingContainsChunked(HttpCommTask<T>& commTask,
+                                              std::string const& encoding);
+
   void checkVSTPrefix();
 
   void processRequest();
